# neu-lang

./: .gitignore  Cargo.toml  example  example.md  example.neu  rust-toolchain  shell.nix  todo.org  todo.txt
crates/bins/cli/: Cargo.toml
crates/bins/cli/src/: build.rs  index.rs  lib.rs  main.rs  span_ext.rs  watch.rs
crates/bins/cli/src/server/: main.css  main.js  mod.rs
crates/bins/cli/tests/: a-modified.md  a.md  b.md
crates/bins/gui/: Cargo.toml
crates/bins/gui/src/: main.rs
crates/bins/server/: Cargo.toml
crates/bins/server/src/: index.html  main.css  main.js  main.rs  resources.rs
crates/eval/: Cargo.toml
crates/eval/src/: children.rs  context.rs  error.rs  lib.rs  markdown.rs  result.rs  value.rs
crates/eval/src/snaps/lib/: eval_binary_bool.snap  eval_binary_error.snap  eval_binary_int.snap  eval_bool_f.snap  eval_bool_t.snap  eval_error.snap  eval_number.snap  eval_parens.snap  eval_pratt_int.snap  eval_skip_trivia.snap  eval_string.snap  eval_unary_bool.snap  eval_unary_int.snap
crates/ide/neovim/: Cargo.toml
crates/ide/neovim/plugin/: neulang.vim
crates/ide/neovim/src/: diagnostic.rs  handler.rs  highlight.rs  lib.rs  main.rs  span_ext.rs  state.rs
crates/lang/analyze/: Cargo.toml
crates/lang/analyze/src/: db.rs  lib.rs
crates/lang/eval/: Cargo.toml
crates/lang/eval/src/: children.rs  db.rs  error.rs  lib.rs  markdown.rs  result.rs  value.rs
crates/lang/render/: Cargo.toml
crates/lang/render/src/: db.rs  html.rs  lib.rs  result.rs
crates/lang/syntax/: Cargo.toml
crates/lang/syntax/src/: article_item.rs  ast.rs  common.rs  context.rs  db.rs  lib.rs  markdown.rs  neu.rs  nodes.rs  parsers.rs
crates/lang/syntax/src/ast/: mod.rs  neu.config.json  neu.ungram
crates/lang/syntax/src/lexers/: article_item_body.rs  article_item_file.rs  article_item_header.rs  md_string.rs  mod.rs  neu.rs  string.rs
crates/lang/syntax/src/parsers/: article_item.rs  common.rs  markdown.rs  neu.rs
crates/markdown/: Cargo.toml
crates/markdown/src/: lib.rs
crates/neovim/: Cargo.toml
crates/neovim/plugin/: neulang.vim
crates/neovim/src/: diagnostic.rs  handler.rs  highlight.rs  lib.rs  main.rs  span_ext.rs  state.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  lexer.rs  lib.rs  main_lexer.rs  main_token.rs  markdown.rs  md.rs  md_string.rs  neu.rs  node.rs  node_builder.rs  nodes.rs  parsers.rs  string_lexer.rs  string_token.rs
crates/parser/src/core/: context.rs  error.rs  input.rs  lexer.rs  mod.rs  node.rs  node_builder.rs  parser.rs  parsers.rs  spanned.rs  state.rs
crates/parser/tests/: snapshots.rs
crates/parser/tests/snaps/snapshots/: lexer_binary_bool.snap  lexer_binary_error.snap  lexer_binary_int.snap  lexer_bool_f.snap  lexer_bool_t.snap  lexer_error.snap  lexer_number.snap  lexer_parens.snap  lexer_pratt_int.snap  lexer_skip_trivia.snap  lexer_string.snap  lexer_unary_bool.snap  lexer_unary_int.snap  lexer_unicode.snap  parser_atom.snap  parser_atom.snap.new  parser_binary_bool.snap  parser_binary_error.snap  parser_binary_int.snap  parser_bool_f.snap  parser_bool_t.snap  parser_error.snap  parser_list.snap  parser_list.snap.new  parser_nil.snap  parser_nil.snap.new  parser_nil_error.snap  parser_nil_error.snap.new  parser_number.snap  parser_parens.snap  parser_pratt_int.snap  parser_semantic_error.snap  parser_semantic_error.snap.new  parser_skip_trivia.snap  parser_string.snap  parser_syntax_error.snap  parser_syntax_error.snap.new  parser_unary_bool.snap  parser_unary_int.snap  parser_unicode.snap  (+3 more)
crates/syntax/: Cargo.toml
crates/syntax/src/: article_item.rs  lib.rs  main_token.rs  markdown.rs  md_string.rs  neu.rs  nodes.rs  string_token.rs
crates/syntax/src/lexers/: article_item_file.rs
crates/test-runner/: Cargo.toml
crates/test-runner/src/: format_changeset.rs  lib.rs
crates/utils/microtree-codegen/: Cargo.toml
crates/utils/microtree-codegen/src/: lib.rs
crates/utils/microtree-derive/: Cargo.toml
crates/utils/microtree-derive/src/: lib.rs
crates/utils/microtree-old-parser/: Cargo.toml
crates/utils/microtree-old-parser/examples/modes/: main.rs  modes.config.json  modes.ungram
crates/utils/microtree-old-parser/examples/parse_sexp/: main.rs  sexp.config.json
crates/utils/microtree-old-parser/examples/pratt/: main.rs  pratt.config.json  pratt.ungram
crates/utils/microtree-old-parser/src/: builder.rs  context.rs  error.rs  lexer.rs  lib.rs  parser.rs  parsers.rs  result.rs  state.rs  token.rs
crates/utils/microtree-old-parser/src/parsers/: basic.rs  pratt.rs
crates/utils/microtree-parser/: Cargo.toml
crates/utils/microtree-parser/src/: lib.rs
crates/utils/parser/: Cargo.toml
crates/utils/parser/src/: arena.rs  children.rs  context.rs  error.rs  input.rs  lexer.rs  lib.rs  node.rs  node_builder.rs  parser.rs  parsers.rs  spanned.rs  state.rs
crates/utils/test-runner/: Cargo.toml
crates/utils/test-runner/src/: lib.rs
examples/: sexp.rs
scripts/: delete-orig.sh  nvim.sh  review.sh
src/: input.rs  lexer.rs  lib.rs  node.rs  node_builder.rs  parser.rs  parsers.rs  testing.rs  token.rs
tests/: 000-number.neu.snap  001-bool_f.neu.snap  002-bool_t.neu.snap  003-skip_trivia.neu.snap  004-error.neu.snap  006-unary_int.neu.snap  007-binary_bool.neu.snap  008-binary_error.neu.snap  009-binary_int.neu.snap  010-op_prec.neu.snap  011-pratt_int.neu.snap  012-string.neu.snap  013-parens.neu.snap  014-struct.neu.snap  015-nested_struct.neu.snap  016-struct_expression.neu.snap  017-struct_ws.neu.snap  018-array.neu.snap  019-access-field.neu.snap  019-access-field.neu.snap.orig  020-access-field-initializer.neu.snap  020-access-field-initializer.neu.snap.orig  021-access-field-initializer-binary.neu.snap  022-access-self-field-initializer.neu.snap  023-access-field-cycle.neu.snap  024-inline-comment.neu.snap  025-multiline-comment.neu.snap  026-multiline-comment-error.neu.snap  029-error-self-access-field-context-not-found.neu.snap  030-error-self-value-not-struct.neu.snap  031-error-access-field-not-found.neu.snap  array.neu.snap  (+17 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+174 files in other folders)
