[package]
name = "xtask"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
pico-args = "0.3.4"
microtree-codegen = { path ="../crates/utils/microtree-codegen" }
glob = "0.3.0"
xshell = "0.1.8"
crossterm = "0.18.2"
