[package]
name = "neu-eval"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neu-parser = { path = "../parser" }
itertools = "0.9.0"

[dev-dependencies]
test-case = "1.0.0"
test-runner = { path = "../test-runner" }

