[package]
name = "neu-markdown"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crates.io
pulldown-cmark = "0.7.0"
text-size = { version = "0.99.0-dev.2", git = "https://github.com/rust-analyzer/text_unit.git", branch = "master"}
