[package]
name = "neu-nvim"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neu-parser = { path = "../parser" }
neu-syntax = { path = "../syntax" }
neu-eval = { path = "../eval" }

nvim-rs = { git = "https://github.com/frondeus/nvim-rs.git", branch = "wpo_buffer_clone", features = ["use_tokio"] }
tokio = "0.2.17"
async-trait = "0.1.30"
rmpv = "0.4.4"
anyhow = "1.0.28"
itertools = "0.9.0"
log = "0.4.8"
env_logger = "0.7.1"
derive_more = "0.99.5"
