[package]
name = "neu-syntax"
version = "0.1.0"
authors = ["frondeus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neu-parser = { path = "../parser" }

text-size = { version = "0.99.0-dev.2", git = "https://github.com/rust-analyzer/text_unit.git", branch = "master"}
itertools = "0.9.0"
derive_more = "0.99.5"
pulldown-cmark = "0.7.0"

[dev-dependencies]
test-runner = { path = "../test-runner" }
test-case = "1.0.0"
