[package]
name = "test-runner"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
anyhow = "1.0.28"
regex = "1.3.6"
difference = "2.0.0"
ansi_term = "0.12.1"
chrono = "0.4.11"
