[package]
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"
name = "neu-cli"
version = "0.1.0"

[dependencies]
neu-parser = { path = "../../utils/parser" }
neu-syntax = { path = "../../lang/syntax" }
neu-eval = { path = "../../lang/eval" }
neu-render = { path = "../../lang/render" }
neu-analyze = { path = "../../lang/analyze" }
neu-db = { path = "../../lang/db" }

anyhow = "1.0.31"
log = "0.4.8"
env_logger = "0.7.1"
clap = "3.0.0-beta.1"
glob = "0.3.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
salsa = "0.15.0"

notify = "4.0.15"
ignore = "0.4.16"
thiserror = "1.0.20"

warp = "0.3.3"
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["full"] }

[dev-dependencies]
assert_fs = "1.0.0"
predicates = "1.0.0"

