[package]
name = "neu-gui"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.1.1"

#[dependencies.iced]
#git = "https://github.com/hecrj/iced.git"
#features = ["glow"]
