[package]
name = "neu-server"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neu-cli = { path = "../cli" }

warp = "0.2.3"
futures = "0.3.5"
anyhow = "1.0.31"
env_logger = "0.7.1"
log = "0.4.8"
tokio = { version = "0.2.21", features = ["full"] }
clap = "3.0.0-beta.1"
