[package]
name = "neu-analyze"
version = "0.1.0"
authors = ["frondeus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neu-syntax = { path = "../syntax" }

#neu-parser = { path = "../../utils/parser" }
neu-canceled = { path = "../../utils/canceled" }

itertools = "0.9.0"
salsa = "0.15.0"
regex = "1.3.9"
lazy_static = "1.4.0"

[dev-dependencies]
test-case = "1.0.0"
test-runner = { path = "../../utils/test-runner" }

