[package]
name = "neu-eval"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neu-parser = { path = "../../utils/parser" }
neu-diagnostics = { path = "../../utils/diagnostics" }
neu-syntax = { path = "../syntax" }

itertools = "0.9.0"
derive_more = "0.99.5"

[dev-dependencies]
test-case = "1.0.0"
test-runner = { path = "../../utils/test-runner" }

