[package]
name = "neu-render"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#neu-parser = { path = "../../utils/parser" }
neu-syntax = { path = "../syntax" }
neu-eval = { path = "../eval" }
neu-analyze = { path = "../analyze" }
neu-canceled = { path = "../../utils/canceled" }

itertools = "0.9.0"
derive_more = "0.99.5"
salsa = "0.15.0"
log = "0.4.8"

[dev-dependencies]
test-runner = { path = "../../utils/test-runner" }

