[package]
name = "neu-syntax"
version = "0.1.0"
authors = ["frondeus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neu-parser = { path = "../../utils/parser" }
neu-canceled = { path = "../../utils/canceled" }

text-size = { version = "1.0.0" }
itertools = "0.9.0"
derive_more = "0.99.5"
pulldown-cmark = "0.8.0"
salsa = "0.15.0"

[dev-dependencies]
test-runner = { path = "../../utils/test-runner" }
test-case = "1.0.0"
