[package]
name = "microtree-parser"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11.4"
microtree = { path = "../lib" }
smol_str = "0.1.17"
text-size = "1.0.0"

[dev-dependencies]
derive_more = "0.99.11"
