[package]
name = "microtree-parser"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[features]
#green = ["microtree"]

[dependencies]
logos = "0.11.4"
smol_str = "0.1.17"
text-size = "1.0.0"
itertools = "0.10.0"

microtree = { path = "../microtree" }

[dev-dependencies]
derive_more = "0.99.11"
diff_assert = { git = "https://github.com/frondeus/diff-assert.git" }
unindent = "0.1.7"
