[package]
name = "neu-parser"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neu-arena = { path = "../arena" }

text-size = { version = "1.0.0" }
itertools = "0.9.0"

