[package]
name = "neu-parser"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neu-arena = { path = "../arena" }
neu-diagnostics = { path = "../diagnostics" }

text-size = { version = "1.0.0" }
itertools = "0.9.0"
#rowan = "0.10.0" # I dont need it now. Its for performance
smol_str = "0.1.16"

